--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -204,21 +204,47 @@ ODグライドは安定する。
 - MK(+1), MK-HK, CR HP-HP, SA1, 強昇竜: 3050
 - MK(+1), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5185
 
-## MK(+3)
+## MK(+3), 2MP
 
 - MK(+3), 2MP, 強昇竜: 2220
-- MK(+3), 2MP, 弱グライド-6P
+- MK(+3), 2MP, 弱グライド-6P: (M:1948)
 - MK(+3), 2MP, 中スピン: 1900
 - MK(+3), 2MP, ODスピン, 中ホーン: 2620
 - MK(+3), 2MP, ODグライド-6P: 2510
 - {端} MK(+3), 2MP, ODスピン, 弱ホーン, 強昇竜: 3120
 - MK(+3), 2MP, SA1, 強昇竜: 3060
-- MK(+3), 2MP, ODグライド-6P, SA2: 4046
+- MK(+3), 2MP, ODグライド-6P, SA2: 4046 (h:3579)
+- MK(+3), 2MP, 中スピン, SA3: 4300
 - MK(+3), 2MP, ODスピン, DR 2MP, 強ホーン, SA3: 4752
+- MK(+3), 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 5053
 
-持続当てや遠めのラッシュなど。
+遠めのラッシュで使う。
 
 MK(+4), 2MPならガードでも無敵技以外で割り込めないし、MK先端でも繋がるので遠めの起き攻めでたまに使う。
+
+## {立} MK(+3), MP
+
+- {立} MK(+3), MP-MP, 中ホーン: 2260
+- {立} MK(+3), MP-MP, ODホーン, 強昇竜: 2960
+- {立} MK(+3), MP-MP, ODスピン, 中ホーン: 2720
+- MK(+3), MP, SA1, 強昇竜: 3060
+- {立} MK(+3), MP-MP, ODホーン, SA1, 強昇竜: 3260
+- {立} MK(+3), MP-MP, CR MK, 2HP, 強スピン, DR 2MP, SA1, 強昇竜: 3429
+- MK(+3), MP, SA2: 3340
+- {立} MK(+3), MP-MP, ODホーン, SA2: 3660
+- {立} MK(+3), MP-MP, CR MK, 2HP, 強スピン, SA2: 3747
+- {立} MK(+3), MP-MP, CR MK, 2HP, 強スピン, DR 2MP, SA2: 3897
+- MK(+3), MP, SA3: 4300
+- {立} MK(+3), MP-MP, 中ホーン, SA3: 4260
+- {立} MK(+3), MP-MP, ODスピン, DR 2MP, 強ホーン, SA3: 4814
+- {立} MK(+3), MP-MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4998
+
+## {立} MK(+4), 2MK
+
+- MK(+4), 2MK-HK, 強ホーン: 2330
+- MK(+4), 2MK-HK, 強ホーン, SA3: 4330
+
+ラッシュは遠くて立ち確認できるなら2MPより2MKの方が高い。
 
 ## MK(+4), 2HP
 
@@ -436,7 +462,7 @@ MKは近くないと当たらない。
 - Sレオパード, ODホーン: 2400
 - {端} Sレオパード, 強昇竜: 2600
 - {端} Sレオパード, DR 2LP, 強スピン, 中ホーン, 中昇竜: 3291
-- {端} Sレオパード, ODホーン, 強昇竜: 3380
+- {端} Sレオパード, ODホーン, 強昇竜: 3380 (端付近で高く上がった時限定)
 - {端} Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 3960
 - {端} Sレオパード, SA1, 強昇竜: 3660
 - {端} Sレオパード, ODホーン, SA1, 強昇竜: 4040
@@ -448,9 +474,9 @@ MKは近くないと当たらない。
 - {端} Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5873
 
 端はODホーン強昇竜が高い。中昇竜からDIもあり。
-強昇竜はODホーンが端近くでないと3ヒット目の当たり方が違って入らない。中までは安定して入る。
 
-端のODホーン弱昇竜が+38で他の弱昇竜締めと違う。
+ODホーンルートは端近くで当たって高く上がらないと強昇竜が当たらない。
+中までは安定して入るが、低く上がった場合は弱昇竜後が+38になって起き攻めが違う。
 
 ## Sハーベスト
 
