--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -42,18 +42,16 @@
 
 ## 6HPのヒット確認
 
-- 6HP(g), ガード
-- 6HP-HP-HP
-  - 弱リンク, 後退
-  - 弱リンク-強Sレオパード, ...
-- {端} 6HP-HP-HP
-  - HP, 前投げ/後退
+（反撃設定 > ダウンリバーサル: ドライブインパクト）
+（反撃設定 > ダウンリバーサル: 何もしない）
 
-差し合いに使う。
+- 6HP-HP-HP
+  - 弱リンク-強Sレオパード, ODホーン, 弱リンク-Sレオパード, ...
+  - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
+  - 弱リンク-強Sレオパード(g), 後退
+- 6HP(g), ガード
 
 6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
-
-Sレオパードは強スワールジャないと追撃が届かないので注意。
 
 ## ラッシュ攻撃からのコンボ
 
@@ -323,3 +321,7 @@ MK持続当ての起き攻めでも使える。
 
 - HP(g), ガード
 - HP-HP, ODホーン
+
+## 端の6HPからの起き攻め
+
+- HP, 前投げ/後退
