--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -156,6 +156,7 @@ ODグライドは安定する。
 - 2MP, CR MK, 2HP, 強スピン, SA2: 3453
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODリンク-Sハーベスト, SA2: 4000
 - 2MP, CR MK, 2HP, 強ホーン, SA3: 4336
+- 2MP, CR MK, 2HP, 強スピン, SA3: 4277
 - {端} 2MP, CR MK, 2HP, 強スピン, 中ホーン, SA3: 4781
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4971
 - 2MP, CR HP, MK-HK, ODスピン-リンク-MK, 中ホーン, SA3: 4904
