--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -492,6 +492,9 @@ Cだと受け身を見てHKと3HKを出し分ける。
 
 ガードだと不利な投げ間合いだが、エレナを知ってたら投げはない。
 
+エレナを知っている人なら、小パンか、インパクトのどちらか。
+こちらは初手ガードが無難。インパクトなら返す。ただ、小パン暴れが多いのでいきなりレオパードもあり。
+
 ## 弱スピン: 34
 
 - DR MK, MK: 目押し
@@ -631,13 +634,18 @@ ODホーンの3段目が端専用の当たり方をしないと入らない。
 
 ## Sレオパード(g): 1
 
+- 2LP, HP: ガードして小パン暴れの守りを潰す
+- 2LP, MK-HK: カウンター確認で繋がる、ガードして小パン暴れを潰す、後退されるとMKが届かない
 - 後退: 投げ間合いの外に下がる
 - 2LP, 2LP: ガードされると2回目が届かないのでワンパン確認が必要
-- 2LK, MK-HK: 4F遅れ、後退を足止めしてMKで触る
 - MK, 弱グライド: 5F遅れ
 - 2MK: 8F遅れ、立ち確認してグライド
 
 フレーム的には微有利だけど、相手が端か後退で投げ間合いの外になる。弱攻撃も1発しか届かない。
+
+できれば2LP(c), MKのカウンター確認して、ガードならHPで暴れを潰しつつDゲージを削る。
+
+相手が端か後退で投げ間合いの外になり、2LP/2LK(g), 2LPや2LP(g), MKが届かない。2LP単発ヒット確認が必要。しかも2LP, 2LPも連打キャンセルじゃないと届かない。
 
 後退に弱いのに使える下段が2MKくらいしかない。
 
