--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -103,11 +103,18 @@ DR 6MPは相打ちでもコンボになる。
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - 2LP/2LK, 2LP, 弱スピン
-  - DR 6MP/2LK/投げ, ...
+  - DR 2LK/投げ, ...
 - 2LP/2LK(g), 2LP, ガード
 
 起き攻めが間合いギリギリで難しい。
 実践的にはDR 2LKが無難。
+
+## 弱攻撃からのスピンキャンセルを使った攻め
+
+- 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
+- 2LP/2LK, 2LP, 弱スピン-弱Sレオパード, ...
+- 2LP/2LK, 2LP, 弱スピン-弱Sマレット, ...
+- 2LP/2LK(g), 2LP, ガード
 
 ## 端のインパクトからのコンボと攻め
 
@@ -284,19 +291,25 @@ MK持続当ての起き攻めでも使える。
 ## Sレオパードを使った攻め
 
 （反撃設定 > ガードリバーサル: 4F技）
-（反撃設定 > ガードリバーサル: 中足 2Fディレイ）
 （反撃設定 > ガードリバーサル: 何もしない）
 
-- Sレオパード(g)
-  - 後退
-  - 2LP, MK, 弱グライド, ガード
-  - 2LP(c), MK-HK, 強ホーン, 弱リンク-3Sレオパード, ...
 - Sレオパード, ODホーン
-  - 弱リンク, 後退
-  - 弱リンク-Sレオパード, ...
-- {端} Sレオパード, ODホーン, 強昇竜
-  - LK, 前投げ
-  - LK, 後退
+  - 弱リンク-強Sレオパード, ...
+- Sレオパード(g)
+  - 2LP, MK-HK, 中ホーン, 弱スピン-強Sレオパード, ...
+  - 2LP, MK-HK(g), 弱グライド-6P, 弱スピン-強Sレオパード, ...
+  - 2LP, MK-HK(g), 弱グライド(g), ガード
+  - 2LP(g), HP, ...
+
+## Sマレットを使った攻め
+
+- Sマレット, 2LP 2回, 弱スピン-Sマレット, ...
+- Sマレット, 2LP 2回, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
+- Sマレット(g)
+  - MK
+  - MK(g),
+  - 投げ
+  - 後退
 
 ## ジャンプ中攻撃のコンボ
 
