--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -96,10 +96,13 @@ MK-HK, 強ホーンより少し近い。
 
 ## MK(g): 1
 
-- MK(g), 2LP, 2LP: ど密着かつガードされた時だけ届く
-- MK(g), 2LK, 2LP:
-- MK(g), MK, ...: 5F遅れ
-- MK(g), 通常投げ: 4F技に負ける
+- 2LP: 単発ヒット確認してコンボ狙い、ガードされても相手の小パンが届かない
+  - MK: 短い技、8F技を潰す、TCや弱グライドを仕込んでもいい
+  - 2LP, HP: 小パン暴れにリターン重視、HPを少し遅らせると中パンもいけることがある
+  - {C} HK: 下段無敵でパニカンを狙う
+- 後退: シミー
+- 投げ: 4F遅れ、MKがヒットしていると届かない
+- MK: 5F遅れ
 
 コパコパやコアコパはど密着でガード限定。ヒットだと1発しか届かない。
 
