--- a/shared/work/strength/豊かさ.md
+++ b/shared/work/strength/豊かさ.md
@@ -13,3 +13,7 @@
 世の中が豊かになるのは、優れたものしか求められなくなるのと裏表なのかも。
 
 世の中が豊かになったせいで貧しくなることはない。貧しい人はいつの時代も貧しい。
+
+「大きさも形もバラバラな自然の物を使うとこんなにも複雑な工程になる。
+でもその複雑さに時間をかけられる縄文時代は豊かだと思う。」
+（週末縄文人チャンネル）
