--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -27,10 +27,12 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 
 ## MK: 2-5
 
-- MK, 2LP, ...: ヒット確認は簡単だけど安い、無敵技以外で割り込めない
+- MK, 2LP, 弱スピン
+- MK, 2LP, (LK), 後退, HP: 暴れ待ちからパニカン狙い
 - MK, 弱グライド: 入れ込み、ガードされても-3で無敵技以外で割り込めない
-- MK(g): 投げ間合いで+1、ヒットすると投げが届かない
-- {C} HK: 下段無敵でパニカンを狙う
+- MK(g): +1、ド密着なら投げ間合いで+1、ヒットすると投げが届かない
+
+MKはド密着が強い。
 
 ヒット確認して2LPやLKに繋いだり、MK-HKのTCも何とか間に合う。
 ガードされても+1から2LP, 2LPまで入る。
@@ -39,6 +41,9 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 2LPやLKの方がヒット確認は簡単。
 
 MKが持続当てしないとあんま強くない。かといって他に重ねる技もないんだよなぁ。
+
+MKがヒットしていると投げや2LP, 2LPが届かない。
+単発で確認して2LP, 弱スピンや2LP, CR 2LPでコンボにするか、2LPまで当ててHPを狙うか。
 
 ## MK(+1): 6-8
 
