--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -79,9 +79,7 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 
 中攻撃の距離では、MPを中心に相手の技を潰したりして、動かなくなったら中下段を狙う。
 
-- MP: 判定が強い、TCに行けると尚良い
 - 2MK: 下段、TCに行けると尚良い
-- 6MK: 中段、TCに行けると尚良い
 
 - {立} HP: 単発ヒット確認してTC、火力が出る
 - {C} HK: とにかく長い、パニカンで2HKが入る
@@ -89,10 +87,15 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 - J.MK: めくりも狙える
 - J.HK
 
+2MPは当てるなら2MKで良くて、どちらかというと差し返しに使いたい。ただ、グライドを仕込んで当てるのもわりと強い。
+
 ## 差し返し
 
-- 2MP: 発生8F、強スピンならリターンが大きいけど弱グライドでもいい
-- HP: 発生12F、中央でも3600、端で4000減る
+- 2MP(pc): 発生8F
+  - CR MK: ほぼ届いてコンボになる
+  - 弱リンク-ハーベスト: ほぼ届いてコンボになる
+  - 強スピン: 火力は高いが遠いと届かない
+- HP(pc): 発生12F、火力重視
 - 2HK: 発生11F、遠めの大足確反とか
 - 6HP: 発生17F、かなり遠めでも届きやすい
 
@@ -121,11 +124,12 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 
 ## 牽制
 
-- LK: 全体18F、弱グライドを仕込んだり、リスクをとって弱スピンを仕込んだり
-- MP: 全体27F、MP-MPを仕込んで置く
-- MK: 全体24F、MK-HKやラッシュを仕込んで置く
-- 2MP: 弱グライドやラッシュを仕込んで置く
-- 2MK-HK: 下段
+- LK: 全体18F
+- MK: 全体24F、短いけど判定が強い、中スピンや弱レオパード、ラッシュなどを仕込むか、近かったらMK-HKでいい
+
+リターン重視だとこの辺も。
+
+- 2MP: 全体30F、隙は大きいけどカウンターで強スピンが繋がる
 
 ## 対空
 
