--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -327,8 +327,10 @@ MK持続当ての起き攻めでも使える。
 
 （差し返しの練習）
 
+- {空振り}, 2MK(pc), 弱リンク-ハーベスト, SA1, 強昇竜
+- {空振り}, 2MK(pc), 弱リンク-ハーベスト, 2HK, DR 投げ
+- {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
 - {2MK(g)}, ガード
-- {2MK/2HK/2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
 
 ## HPのヒット確認
 
