--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -80,22 +80,23 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 中攻撃の距離では、MPを中心に相手の技を潰したりして、動かなくなったら中下段を狙う。
 
 - 2MK: 下段、TCに行けると尚良い
+- {C} HK: とにかく長い、パニカンで2HKが入る、特に端が強い
 
 - {立} HP: 単発ヒット確認してTC、火力が出る
-- {C} HK: とにかく長い、パニカンで2HKが入る
 - レオパード: 発生23Fで6HPの倍くらい長い、ガードされて-5だが先端なら離れる
 - J.MK: めくりも狙える
 - J.HK
+- 2MP, 弱グライド
 
 2MPは当てるなら2MKで良くて、どちらかというと差し返しに使いたい。ただ、グライドを仕込んで当てるのもわりと強い。
 
 ## 差し返し
 
-- 2MP(pc): 発生8F
-  - CR MK: ほぼ届いてコンボになる
-  - 弱リンク-ハーベスト: ほぼ届いてコンボになる
-  - 強スピン: 火力は高いが遠いと届かない
+- 2MP(pc), 弱リンク-ハーベスト: ノーゲージでSA1にもいける
 - HP(pc): 発生12F、火力重視
+
+- 2MP, CR MK: 発生8F、安定だがゲージを使う
+- 2MP(pc), 強スピン: 遠いと届かない
 - 2HK: 発生11F、遠めの大足確反とか
 - 6HP: 発生17F、かなり遠めでも届きやすい
 
@@ -121,6 +122,8 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 6HPは差し返しというよりも、相手の空振りで有利フレームをもらってからとりあえずガードさせるつもりで振る。
 
 差し返しよりも、いっそ-1からMKを置く方が強いかも。8Fの中足を潰す狙い。
+
+エレナの差し返しは2MPから弱ハーベストかODハーベストがコスパいいし、強スピンより遠くても当たる。あとはキャンセルラッシュが無難ではある。
 
 ## 牽制
 
