--- a/study/philosophy/god/神の存在.md
+++ b/study/philosophy/god/神の存在.md
@@ -7,3 +7,7 @@
 
 「神の存在」と言った場合に、「全知全能の存在＝無限の実在」なのか「人間の認知外の存在」なのかで存在するかどうかは変わる。
 まずは「神」を何者か定義しないとその存在についても議論できない。
+
+「神が存在する」と仮定しても「神が存在しない」と仮定しても現実の現象は変わらないので、無駄な前提条件を増やす必要はない。
+同様に「自由意志が存在する」「自由意志が存在しない」のどちらでも変わらない。
+だから、そもそも無駄な議論ではある。あってもいいし、なくてもいい。それで誰かと争う必要もない。とはいえ人間は愚かだし争いが好きだ。
