--- a/games/Street-Fighter/Six/characters/Terry/テリーの対策.md
+++ b/games/Street-Fighter/Six/characters/Terry/テリーの対策.md
@@ -13,13 +13,25 @@
 ## ガードして不利になる技
 
 - HP: +1
-- 強ウェイブ: +5、橋では投げ間合い
+- 強ウェイブ: +5、端では投げ間合い
 - 中ナックル(+7): +1から+2、投げ間合い
+- 強ナックル(+9): +1から+5
 
-強ウェイブはキャンセルで出してくるとHPからでも8Fあるので割り込みを狙うのはあり。
+強ウェイブはキャンセルで出してくるとHPからでも8Fあるので割り込みを狙うのはあり。ただ相手有利なので不利な読み合い。
 テリーが暴れても弱ナックルくらいだけど、先端以外は連続ガード。
 DR HPでも4Fある。
 
 ## 確反
 
+- 2HK: -11
 - 弱ナックル: -5、中段
+- 中ナックル: -6、先端はむしろ有利
+- 強/ODナックル: -8、先端はむしろ有利
+- チャージ: -11以上、コンボミスでたまに漏れる
+- 昇竜/SA: -25以上
+
+クラックシュートには確反がないけど-1から-3で、たまに無敵技で暴れてくるので手を出さなくてもいい。
+
+## その他
+
+テリーはとにかく中足が強くて、中段でもぼったくられる。確反が大事。
