--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -767,3 +767,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 非営利の活動をビジネスに含めるべきかどうか。仕事ではあるけど。
 
 ビジネスは生活費を稼ぐのが目的ではない。生活費を稼ぐのはビジネスを続ける手段。
+
+高くても買う人の気持ちがわからないとニッチなビジネスはできない。
