--- a/shared/society/社交性.md
+++ b/shared/society/社交性.md
@@ -41,3 +41,5 @@ https://ja.wikipedia.org/wiki/%E7%A4%BE%E4%BC%9A%E6%8A%80%E8%83%BD
 男性だったら相手が老若男女どうであろうと初対面はにこやかに会話するけど、女性は男性を警戒しがち。
 
 もし本当に社交性が高い人なら、社交性が低い人とも付き合える。
+
+わがままというか、情や思いやりがなくて周りを気にかけないのは社交的には良くない。
