--- a/shared/voice/training/tips/声を育てる.md
+++ b/shared/voice/training/tips/声を育てる.md
@@ -20,6 +20,8 @@
 
 逆にいうと、高く軽い声を出すには声色を変えたりする工夫が必要。
 
+自分という楽器を大きくするというのは、より大きな音で、よりよく響き、音域が広いこと。
+
 ## その他
 
 音域を広げるのは、自分という楽器が元々カスタネットレベルならリコーダーレベルまで育てる意味はある。ただ、リコーダーレベルになったら次は音域よりも楽器そのものをより高価で大きなものにするべき。
