--- a/study/philosophy/topics/人生哲学.md
+++ b/study/philosophy/topics/人生哲学.md
@@ -1,5 +1,6 @@
-- どうして人は生まれたのか。
-- どうして人は生きるのか。
-- どうして人は争うのか。
+- どうして人は生まれたのか
+- どうして人は生きるのか
+- どのように生きるのか
+- どうして人は争うのか
 
 どうでもいい問いほど長く考えられるし、気軽に議論できる。
