--- a/shared/lifestyle/meal/drink/酒.md
+++ b/shared/lifestyle/meal/drink/酒.md
@@ -8,3 +8,5 @@
 酒は緊張を緩める。
 
 味がわからないのに高い酒を買っても意味がないので、高い酒を買う資格があるかどうか、定期的に格付けチェックするのもいいかも。
+
+デキャンタはワインを瓶から移す容器。一旦容器に入れることをデキャンティングまたはデキャンタージュという。酸素と触れることで味や香りが変わるので良し悪し。特に古酒は澱や古くなったコルクやガラスの破片を取り除くために移し替えることがある。
