--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -36,12 +36,37 @@
 
 2LPの射程ギリギリだとLKしか届かない。
 
-## 2LP(+4)
+## 2LP(+2)
+
+- 2LP(+2), MK-HK, 強昇竜: 1820
+- 2LP(+2), MK-HK, 強ホーン: 1760
+- 2LP(+2), MK-HK, 中ホーン: 1700
+- {端} 2LP(+2), MK-HK, 弱ホーン, 強昇竜: 2200
+- {端} 2LP(+2), MK-HK, 中ホーン, 弱昇竜: 2100
+- 2LP(+2), MK-HK, ODスピン-Sハーベスト, 中ホーン: 2220
+- 2LP(+2), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 2395
+- 2LP(+2), MK-HK, SA1, 強昇竜: 2300
+- 2LP(+2), MK-HK, ODスピン-Sハーベスト, SA1, 強昇竜: 2540
+- 2LP(+2), MK-HK, ODスピン-Sハーベスト, SA1, 弱ホーン: 2510
+- 2LP(+2), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 強昇竜: 2951
+- 2LP(+2), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA1, 弱ホーン: 2927
+- 2LP(+2), MK-HK, SA2: 2660
+- 2LP(+2), MK-HK, ODスピン-Sハーベスト, SA2: 2980
+- 2LP(+2), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, SA2: 3419
+- 2LP(+2), MK-HK, 強ホーン, SA3: 3760
+- 2LP(+2), MK-HK, ODスピン-Sハーベスト, 中ホーン, SA3: 4220
+- 2LP(+2), MK-HK, CR HP-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 4395
+
+遠いと届かない。
+
+## 2LP(+4), 2HP
 
 - 2LP(+4), 2HP, 強スピン, 中ホーン: 2380
 - 2LP(+4), 2HP, 強スピン, SA2: 3180
 - {端} 2LP(+4), 2HP, 強スピン, 中ホーン, SA3: 4380
 - 2LP(+4), 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4474
+
+遠いと届かない。
 
 ## 2LP(+4), 2MP
 
