--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -83,7 +83,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - DR 6MP/2LK/前投げ, ...
   - {端} HP, 前投げ/後退
 - DR 6MP/2LK(g), MK, 弱グライド(g), ガード
-- {端} DR 6MP/2LK, MK-HK, 弱ホーン, 強昇竜, ...
+- {端} DR 6MP/2LK, MK-HK, 中ホーン, 強昇竜, ...
 
 DR 6MPは相打ちでもコンボになる。
 
@@ -121,7 +121,7 @@ DR 6MPは相打ちでもコンボになる。
 （反撃設定 > ガードリバーサル: 4F技）
 
 - DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
-  - MK(+3), MK-HK, 弱ホーン, 弱昇竜, 弱リンク, ...
+  - MK(+3), MK-HK, 中ホーン, 弱昇竜, 弱リンク, ...
   - MK(+3)(g), 前投げ, DI, ...
 
 壁ドンはヒットもガードも同じルートでいい。
@@ -179,8 +179,8 @@ MK持続当ての起き攻めでも使える。
 
 ## 端の弱昇竜からの攻め
 
-- {端} DR MK, MK-HK, 弱ホーン, 弱昇竜, 弱リンク
-  - MK(+3), MK-HK, 弱ホーン, 弱昇竜, ...
+- {端} DR MK, MK-HK, 中ホーン, 弱昇竜, 弱リンク
+  - MK(+3), MK-HK, 中ホーン, 弱昇竜, ...
   - MK(+3)(g)
     - MK, 弱グライド, ガード
     - 前投げ
@@ -193,7 +193,7 @@ MK持続当ての起き攻めでも使える。
 （ダウンリバーサル: 前方ジャンプ）
 （ダウンリバーサル: 何もしない）
 
-- {端} DR MK, MK-HK, 弱ホーン, 強昇竜, LK
+- {端} DR MK, MK-HK, 中ホーン, 強昇竜, LK
   - 前投げ
     - {前方ジャンプ}, 昇竜
   - 後退
@@ -295,11 +295,37 @@ MK持続当ての起き攻めでも使える。
 
 - Sレオパード, ODホーン
   - 弱リンク-強Sレオパード, ...
+  - {端} 強昇竜, LK, 後退: 端の追撃
 - Sレオパード(g)
-  - 2LP, MK-HK, 中ホーン, 弱スピン-強Sレオパード, ...
-  - 2LP, MK-HK(g), 弱グライド-6P, 弱スピン-強Sレオパード, ...
-  - 2LP, MK-HK(g), 弱グライド(g), ガード
-  - 2LP(g), HP, ...
+  - 2LP, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
+  - 2LP, HP-HP, ODホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 強昇竜, LK, 後退: 端の追撃
+  - 2LP, HP(g), ガード
+
+## Sレオパードを使った攻め 2
+
+## Sレオパードを使った攻め
+
+（反撃設定 > ガードリバーサル: 4F技）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- Sレオパード, ODホーン
+  - 弱リンク-強Sレオパード, ...
+  - {端} 強昇竜, LK, 後退: 端の追撃
+- Sレオパード(g)
+  - 2LP, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
+  - 2LP, HP-HP, ODホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 強昇竜, LK, 後退: 端の追撃
+  - 2LP, HP(g), ガード
+  - 2LP(c), MK-HK, 中ホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
 
 ## Sマレットを使った攻め
 
