--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -46,7 +46,9 @@
 - DR 2LP, 2MP
 - DR 2LK, LK
 - 弱リンク-ハーベスト
+- DR MK, 2MP, 弱グライド
 - DR MK, 2MP
+- DR MK(+3)
 - DR 6MK, MK
 - DR 2MK, 2MP
 - {C} 3HK = {C} DR HK, MK
