--- a/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
@@ -21,7 +21,7 @@ HP(pc)から。ノーゲージでもかなり火力が出る。
 
 ## 24F
 
-一応、最大が強スピン(pc)-リンクMK, DR 2LP, CR HP-HPのルート。
+一応、最大が強スピン(pc)-Sハーベスト, DR 2LP, CR HP-HPのルート。
 ただ、基本的にはHP(pc)からでいい。
 
 ## シミー
