--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -6,7 +6,7 @@
 
 - 6HP-HP-HP
 - DR 2LK/6MK, MK-HK, 強ホーン
-- J.HK, 2MP, ODグライド
+- J.HP, 2MP, ODグライド
 - DR MK, 2MP, ODグライド
 - HP(pc)-HP, DR 2MP
 - DI(pc)
@@ -40,38 +40,97 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
+<!-- 初級 -->
+
 ## 6HPのヒット確認
 
 （反撃設定 > ダウンリバーサル: ドライブインパクト）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
 - 6HP-HP-HP
-  - 弱リンク-強Sレオパード, ODホーン, 弱リンク-Sレオパード, ...
+  - 弱リンク-強Sレオパード, ...
   - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
-  - 弱リンク-強Sレオパード(g), 後退
 - 6HP(g), ガード
 
 6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
 
+## Sレオパードのヒット確認
+
+- Sレオパード, ODホーン
+  - 弱リンク, 後退
+  - {端} 強昇竜
+    - LK, 後退
+- Sレオパード(g), 後退
+
+6HPのヒット確認と一緒に練習するといい。
+
 ## ラッシュ攻撃からのコンボ
 
 - DR MK, 2MP, 弱グライド-6P
-  - DR MK, ...: 目押し
-  - {端} HP, 前投げ/後退
+  - (ステップ), DR MK, ...
 - DR MK, 2MP, 弱グライド(g), ガード
+
+DR MKをガードされても2MPが埋まる。
+
+慣れてきたらステップを挟まずにDR MKを重ねた方が応用しやすい。
+
+## 昇竜やSAの確反
+
+（確定反撃の練習）
+
+1. 2HK, 弱リンク, 後退
+2. {無敵技}, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱リンク, 後退
+3. {無敵技}, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜, 弱リンク, 後退
+4. {無敵技}, HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
+5. MK(+3), MP-HK, 中ホーン, 弱昇竜, 弱リンク, 後退
+
+端から端まで運ぶ。失敗したらリセット。
+
+## インパクト返しのコンボ
+
+（ドライブインパクトへの対応練習）
+
+- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱ホーン
+  - 弱リンク, 後退
+  - 弱リンク-強Sレオパード, ...
+  - {端} 弱昇竜: 追撃
+    - 弱リンク, 後退
 
 ## ジャンプ攻撃からのコンボ
 
 （反撃設定 > ダウンリバーサル: 無敵技）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
-- J.HK, 2MP, ODグライド-6P, J.HK, ...
-  - {無敵技}, HP(pc), ...
-- J.HK(g), 2MP, 弱グライド-6P:
-  - DR 2LK/6MP/投げ, ...: 目押し
-- J.HK(g), 2MP, 弱グライド(g), ガード
+- J.HP, 2MP, ODグライド-6P, J.HP, ...
+  - {無敵技}, HP(pc), ...: 確反
+- J.HP(g), 2MP, 弱グライド-6P
+  - 弱リンク, 後退
+- J.HP(g), 2MP, 弱グライド(g), ガード
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
+
+## 弱攻撃からSA3のコンボ
+
+- 2LP/2LK, 2LP, 弱スピン, SA3
+- 2LP/2LK(g), 2LP, ガード
+
+## 弱攻撃からのスピンキャンセルを使った攻め
+
+- 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
+- 2LP/2LK, 2LP, 弱スピン-弱リンク, 前投げ
+- 2LP/2LK, 2LP, 弱スピン-弱Sレオパード, ...
+- 2LP/2LK, 2LP, 弱スピン-弱Sマレット, ...
+- 2LP/2LK(g), 2LP, ガード
+
+## 端のインパクトからのコンボと攻め
+
+（反撃設定 > ガードリバーサル: 4F技）
+
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
+  - MK(+3), MK-HK, 中ホーン, 弱昇竜, 弱リンク, ...
+  - MK(+3)(g), 前投げ, DI, ...
+
+壁ドンはヒットもガードも同じルートでいい。
 
 ## ラッシュ中下段
 
@@ -87,45 +146,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 DR 6MPは相打ちでもコンボになる。
 
-## 昇竜やSAの確反
-
-（確定反撃の練習）
-
-1. HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, 弱リンク, 後退
-2. HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜, 弱リンク, 後退
-3. HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
-4. MP(+2), MP-HK, 弱ホーン, 強昇竜, LK, 前投げ
-
-端から始める。
-
-## 弱攻撃のコンボ
-
-（反撃設定 > ダウンリバーサル: 4F技）
-
-- 2LP/2LK, 2LP, 弱スピン
-  - DR 2LK/投げ, ...
-- 2LP/2LK(g), 2LP, ガード
-
-起き攻めが間合いギリギリで難しい。
-実践的にはDR 2LKが無難。
-
-## 弱攻撃からのスピンキャンセルを使った攻め
-
-- 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
-- 2LP/2LK, 2LP, 弱スピン-弱Sレオパード, ...
-- 2LP/2LK, 2LP, 弱スピン-弱Sマレット, ...
-- 2LP/2LK(g), 2LP, ガード
-
-## 端のインパクトからのコンボと攻め
-
-（反撃設定 > ガードリバーサル: 4F技）
-
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
-  - MK(+3), MK-HK, 中ホーン, 弱昇竜, 弱リンク, ...
-  - MK(+3)(g), 前投げ, DI, ...
-
-壁ドンはヒットもガードも同じルートでいい。
-
 ## キャンセルラッシュ
 
 - 2MP, CR MK, 2HP, 強スピン
@@ -137,16 +157,6 @@ DR 6MPは相打ちでもコンボになる。
 - 2MP(g), CR MK
   - 投げ: 1F遅らせる
   - 後退
-
-## インパクト返しのコンボ
-
-（ドライブインパクトへの対応練習）
-
-- DI(pc), ステップ, 2MP, 中スピン-Sハーベスト
-  - 中ホーン, 弱リンク, 後退
-  - {端} 弱ホーン, 弱昇竜, 弱リンク, ...
-
-起き攻めは確反のルートと同じ。
 
 ## ラッシュ中攻撃のコンボ
 
@@ -170,6 +180,29 @@ MK持続当ての起き攻めでも使える。
 
 - {端} 前投げ, DR 前投げ, ...
 - {端} 前投げ, DR 2LK, ガード, {通常投げ}, 2MP, CR MK, ...
+
+ <!-- ---- この辺りから優先度検討中 ---- -->
+
+## 下段の崩し
+
+- 2MK-HK, CR MK, 2HP, 強スピン, ....
+- 2MK(g), ガード
+
+## 6Fの確反
+
+（ドライブリバーサル: 起き上がり発動）
+
+- MK(pc), 強スピン, 中ホーン
+- {端} MK(pc), 強スピン, 弱ホーン, 強昇竜
+
+## 差し返しの練習
+
+（差し返しの練習）
+
+- {空振り}, 2MK(pc), 弱リンク-ハーベスト, SA1, 強昇竜
+- {空振り}, 2MK(pc), 弱リンク-ハーベスト, ODホーン, 強リンク-マレット
+- {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
+- {2MK(g)}, ガード
 
 ## 弱攻撃から伸ばすコンボ
 
@@ -200,8 +233,6 @@ MK持続当ての起き攻めでも使える。
     - {通常投げ}, HP(pc), ...
     - {前方ジャンプ}, 対空
 
- <!-- ---- この辺りから優先度検討中 ---- -->
-
 ## 中段の崩し
 
 - 6MK(g), ガード
@@ -213,11 +244,6 @@ MK持続当ての起き攻めでも使える。
 - 2MK(g), ガード
 - 2MK-HK, 強ホーン
   - DR 2LK/6MK/投げ, ...
-
-## 6Fの確反
-
-- MK(pc), 強スピン, 中ホーン
-- {端} MK(pc), 強スピン, 弱ホーン, 強昇竜
 
 ## 4Fの確反
 
@@ -255,8 +281,6 @@ MK持続当ての起き攻めでも使える。
   - 後退: シミー
 - {端} 弱昇竜, 2LK, 6MK(g), 2LP, ガード
 
-## マレットスマッシュを使った攻め
-
 ## ノーゲージの確反
 
 - HP(pc)-HP, 弱ホーン, 弱昇竜/強昇竜/SA3
@@ -288,33 +312,12 @@ MK持続当ての起き攻めでも使える。
 - MP-MP, 弱グライド-6P, DR 6MK/2LK/投げ, ...
 - MP(g), ガード
 
-## Sレオパードを使った攻め
+## Sレオパードをガードされた場合のヒット確認
 
 （反撃設定 > ガードリバーサル: 4F技）
 （反撃設定 > ガードリバーサル: 何もしない）
 
-- Sレオパード, ODホーン
-  - 弱リンク-強Sレオパード, ...
-  - {端} 強昇竜, LK, 後退: 端の追撃
-- Sレオパード(g)
-  - 2LP, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
-    - 弱リンク-強Sレオパード, ...
-    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
-  - 2LP, HP-HP, ODホーン
-    - 弱リンク-強Sレオパード, ...
-    - {端} 強昇竜, LK, 後退: 端の追撃
-  - 2LP, HP(g), ガード
-
-## Sレオパードを使った攻め 2
-
-## Sレオパードを使った攻め
-
-（反撃設定 > ガードリバーサル: 4F技）
-（反撃設定 > ガードリバーサル: 何もしない）
-
-- Sレオパード, ODホーン
-  - 弱リンク-強Sレオパード, ...
-  - {端} 強昇竜, LK, 後退: 端の追撃
+- Sレオパード, ODホーン, ...
 - Sレオパード(g)
   - 2LP, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
     - 弱リンク-強Sレオパード, ...
@@ -327,14 +330,19 @@ MK持続当ての起き攻めでも使える。
     - 弱リンク-強Sレオパード, ...
     - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
 
+まずは2LP, HPルートが基本で、カウンター確認できた時だけMK-HKにする。
+最悪、カウンターでもHPなら届くのでHPでいい。
+
 ## Sマレットを使った攻め
 
 - Sマレット, 2LP 2回, 弱スピン-Sマレット, ...
+- Sマレット(g)
+  - 前投げ
+
+## Sマレットを使った攻め 2
+
 - Sマレット, 2LP 2回, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - Sマレット(g)
-  - MK
-  - MK(g),
-  - 投げ
   - 後退
 
 ## ジャンプ中攻撃のコンボ
@@ -343,26 +351,15 @@ MK持続当ての起き攻めでも使える。
 - J.MK(g), MK, 2LP, 弱スピン, ...
 - J.MK(g), MK(g), ガード
 
-## ラッシュ攻撃からのコンボ
+## ジャンプ弱攻撃のコンボ
 
-- DR MK, 2MP, ODグライド-6P, J.HK, ...
-- DR MK(g), 2MP, 弱グライド, ガード
-- DR MK(g); 前投げ: 1F遅らせる
-
-## 差し返しの練習
-
-（差し返しの練習）
-
-- {空振り}, 2MK(pc), 弱リンク-ハーベスト, SA1, 強昇竜
-- {空振り}, 2MK(pc), 弱リンク-ハーベスト, 2HK, DR 投げ
-- {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
-- {2MK(g)}, ガード
+- J.LP-MP, MK-HK, 強ホーン, 弱リンク, 後退
+- J.LP-MP(g), MK, 2LP, 弱スピン, ...
+- J.LP-MP(g), MK(g), ガード
 
 ## HPのヒット確認
 
-- HP(g), ガード
 - HP-HP, ODホーン
-
-## 端の6HPからの起き攻め
-
-- HP, 前投げ/後退
+  - 強リンク-Sレオパード, ...
+  - {端} 強昇竜, ...
+- HP(g), ガード
