--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,40 +1,3 @@
-<!--
-
-整理中メモ
-
-コンボ:
-
-- 6HP-HP-HP
-- DR 2LK/6MK, MK-HK, 強ホーン
-- J.HP, 2MP, ODグライド
-- DR MK, 2MP, ODグライド
-- HP(pc)-HP, DR 2MP
-- DI(pc)
-- DI(壁)
-- 2LP/2LK, 2LP, 弱スピン
-- 2LP/2LK, 2LP, 弱スピン-リンク
-- 2LP/2LK, 2LP, CR 2LP, 2HP, 強スピン
-- 2MP, CR MK, 2HP, 強スピン
-- 2MP(pc), 強スピン
-- J.MK, MK-HK, 強ホーン
-- DR MK, MK-HK, 強ホーン
-- 6MK-MK
-- 2MK-HK, 強ホーン
-- MP-MP
-- HP-HP
-
-セットプレイ:
-
-- Sレオパード
-- Sマレット
-- {端} 2MK, 投げ/後退: +34
-- {端} 弱リンク, MK(+3)(g), 投げ/後退: +36
-- {端} LK, 投げ/後退: +22/+23
-- {端} HP, 投げ/後退: +39
-- {端} 前投げ, DR 前投げ
-
--->
-
 ## 共通設定
 
 （ダミー設定 > ガード: ランダム）
@@ -64,15 +27,7 @@
 
 6HPのヒット確認と一緒に練習するといい。
 
-## ラッシュ攻撃からのコンボ
-
-- DR MK, 2MP, 弱グライド-6P
-  - (ステップ), DR MK, ...
-- DR MK, 2MP, 弱グライド(g), ガード
-
-DR MKをガードされても2MPが埋まる。
-
-慣れてきたらステップを挟まずにDR MKを重ねた方が応用しやすい。
+<!-- 中級 -->
 
 ## 昇竜やSAの確反
 
@@ -92,9 +47,18 @@ DR MKをガードされても2MPが埋まる。
 
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱ホーン
   - 弱リンク, 後退
-  - 弱リンク-強Sレオパード, ...
-  - {端} 弱昇竜: 追撃
+  - {端} 弱昇竜: 端の追撃
     - 弱リンク, 後退
+
+## ラッシュ攻撃からのコンボ
+
+- DR MK, 2MP, 弱グライド-6P
+  - ステップ, DR MK, ...
+- DR MK, 2MP, 弱グライド(g), ガード
+
+DR MKをガードされても2MPが埋まる。
+
+慣れてきたらステップを挟まずにDR MKを重ねた方が応用しやすい。
 
 ## ジャンプ攻撃からのコンボ
 
@@ -109,10 +73,37 @@ DR MKをガードされても2MPが埋まる。
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
-## 弱攻撃からSA3のコンボ
+## 弱攻撃のコンボ
 
-- 2LP/2LK, 2LP, 弱スピン, SA3
+（反撃設定 > ダウンリバーサル: 4F技）
+
+- 2LP/2LK, 2LP, 弱スピン
+  - SA3
+  - DR 投げ: 目押し
 - 2LP/2LK(g), 2LP, ガード
+
+目押しの起き攻めはギリギリで難しい。
+
+## 端のインパクトからのコンボ
+
+（反撃設定 > ガードリバーサル: 4F技）
+
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
+  - MK(+3), MK-HK, 中ホーン, 弱昇竜, 弱リンク, ...
+  - MK(+3)(g), 前投げ, DI, ...
+
+壁ドンはヒットもガードも同じルートでいい。
+
+## 差し返しの練習
+
+（差し返しの練習）
+
+- {空振り}, 2MK(pc), 弱リンク-ハーベスト, SA1, 強昇竜
+- {空振り}, 2MK(pc), 弱リンク-ハーベスト, ODホーン, 強リンク-マレット
+- {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
+- {2MK(g)}, ガード
+
+ <!-- ---- この辺りから優先度検討中 ---- -->
 
 ## 弱攻撃からのスピンキャンセルを使った攻め
 
@@ -122,15 +113,17 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - 2LP/2LK, 2LP, 弱スピン-弱Sマレット, ...
 - 2LP/2LK(g), 2LP, ガード
 
-## 端のインパクトからのコンボと攻め
+## 下段の崩し
 
-（反撃設定 > ガードリバーサル: 4F技）
+- 2MK-HK, CR MK, 2HP, 強スピン, ....
+- 2MK(g), ガード
 
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
-  - MK(+3), MK-HK, 中ホーン, 弱昇竜, 弱リンク, ...
-  - MK(+3)(g), 前投げ, DI, ...
+## 6Fの確反
 
-壁ドンはヒットもガードも同じルートでいい。
+（ドライブリバーサル: 起き上がり発動）
+
+- MK(pc), 強スピン, 中ホーン
+- {端} MK(pc), 強スピン, 弱ホーン, 強昇竜
 
 ## ラッシュ中下段
 
@@ -158,21 +151,6 @@ DR 6MPは相打ちでもコンボになる。
   - 投げ: 1F遅らせる
   - 後退
 
-## ラッシュ中攻撃のコンボ
-
-（ダウンリバーサル: 何もしない）
-（ダウンリバーサル: ドライブインパクト）
-
-- DR MK, MK-HK, 強ホーン
-  - ステップ, DR MK, ...
-- DR MK(g), MK, 弱グライド-6P
-  - ステップ, DR MK, ...
-- DR MK(g), MK, 弱グライド(g), ガード
-
-MK持続当ての起き攻めでも使える。
-
-起き上がりインパクトは返す。
-
 ## 端の投げループとシミー
 
 （反撃設定 > ダウンリバーサル: 通常投げ）
@@ -180,29 +158,6 @@ MK持続当ての起き攻めでも使える。
 
 - {端} 前投げ, DR 前投げ, ...
 - {端} 前投げ, DR 2LK, ガード, {通常投げ}, 2MP, CR MK, ...
-
- <!-- ---- この辺りから優先度検討中 ---- -->
-
-## 下段の崩し
-
-- 2MK-HK, CR MK, 2HP, 強スピン, ....
-- 2MK(g), ガード
-
-## 6Fの確反
-
-（ドライブリバーサル: 起き上がり発動）
-
-- MK(pc), 強スピン, 中ホーン
-- {端} MK(pc), 強スピン, 弱ホーン, 強昇竜
-
-## 差し返しの練習
-
-（差し返しの練習）
-
-- {空振り}, 2MK(pc), 弱リンク-ハーベスト, SA1, 強昇竜
-- {空振り}, 2MK(pc), 弱リンク-ハーベスト, ODホーン, 強リンク-マレット
-- {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
-- {2MK(g)}, ガード
 
 ## 弱攻撃から伸ばすコンボ
 
@@ -363,3 +318,9 @@ MK持続当ての起き攻めでも使える。
   - 強リンク-Sレオパード, ...
   - {端} 強昇竜, ...
 - HP(g), ガード
+
+## インパクト返しのSA3コンボ
+
+（ドライブインパクトへの対応練習）
+
+- DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3
