--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -20,12 +20,28 @@
 ## Sレオパードのヒット確認
 
 - Sレオパード, ODホーン
-  - 弱リンク, 後退
+  - 弱リンク-強Sレオパード, ...
   - {端} 強昇竜
+    - LK, 前投げ, ステップ, 後退
     - LK, 後退
 - Sレオパード(g), 後退
 
 6HPのヒット確認と一緒に練習するといい。
+
+## 弱攻撃のヒット確認
+
+- 2LP/2LK, 2LP, 弱スピン-弱リンク
+  - 2LK, 2LP, ...
+- 2LP/2LK(g), 2LP, ガード
+
+## 弱攻撃とSマレットのヒット確認
+
+- 2LP/2LK, 2LP, 弱スピン-弱リンク
+  - Sマレット, 2LP 2回, 弱スピン-弱リンク, ガード
+  - Sマレット(g)
+    - 前投げ, ステップ, 後退
+    - 後退
+- 2LP/2LK(g), 2LP, ガード
 
 <!-- 中級 -->
 
@@ -67,11 +83,38 @@ DR MKをガードされても2MPが埋まる。
 
 - J.HP, 2MP, ODグライド-6P, J.HP, ...
   - {無敵技}, HP(pc), ...: 確反
-- J.HP(g), 2MP, 弱グライド-6P
+- J.HP(g), 2MP, 弱グライド
   - 弱リンク, 後退
 - J.HP(g), 2MP, 弱グライド(g), ガード
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
+
+## 端のインパクトからのコンボ
+
+（反撃設定 > ガードリバーサル: 4F技）
+
+- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
+  - MK(+3), MK-HK, 中ホーン, 弱昇竜, 弱リンク, ...
+  - MK(+3)(g), 前投げ, DI, ...
+
+壁ドンはヒットもガードも同じルートでいい。
+
+## キャンセルラッシュの展開
+
+- 2MP, CR MK, 2HP, 強スピン
+  - 中ホーン
+    - 弱リンク, 後退
+    - 弱リンク-Sレオパード, ...
+  - {端} 弱ホーン, 強昇竜
+    - LK, 前投げ/後退
+- 2MP(g), CR MK, MK, 弱グライド, ...
+
+## HPのヒット確認
+
+- HP-HP, ODホーン
+  - 強リンク-Sレオパード, ...
+  - {端} 強昇竜, ...
+- HP(g), ガード
 
 ## 弱攻撃のコンボ
 
@@ -84,15 +127,18 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 目押しの起き攻めはギリギリで難しい。
 
-## 端のインパクトからのコンボ
+## 端の柔道
 
-（反撃設定 > ガードリバーサル: 4F技）
+（反撃設定 > ダウンリバーサル: 4F技）
 
-- DI(壁), 2MP, 中スピン-Sハーベスト, 弱昇竜 2回, 弱リンク
-  - MK(+3), MK-HK, 中ホーン, 弱昇竜, 弱リンク, ...
-  - MK(+3)(g), 前投げ, DI, ...
+- {端} 前投げ, DR 前投げ, ...
 
-壁ドンはヒットもガードも同じルートでいい。
+<!-- 上級 -->
+
+## 下段の崩し
+
+- 2MK-HK, CR MK, 2HP, 強スピン, ....
+- 2MK(g), ガード
 
 ## 差し返しの練習
 
@@ -103,6 +149,38 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
 - {2MK(g)}, ガード
 
+## 6HPから端の攻め
+
+（ダウンリバーサル: 中足 2Fディレイ）
+（ダウンリバーサル: 通常投げ）
+（ダウンリバーサル: 何もしない）
+
+- 6HP-HP-HP
+  - {端} HP, 前投げ
+  - {端} HP, 後退: シミー
+- 6HP(g), ガード
+
+## Sレオパードをガードされた場合のヒット確認
+
+（反撃設定 > ガードリバーサル: 4F技）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- Sレオパード, ODホーン, ...
+- Sレオパード(g)
+  - 2LP, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
+  - 2LP, HP-HP, ODホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 強昇竜, LK, 後退: 端の追撃
+  - 2LP, HP(g), ガード
+  - 2LP(c), MK-HK, 中ホーン
+    - 弱リンク-強Sレオパード, ...
+    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
+
+まずは2LP, HPルートが基本で、カウンター確認できた時だけMK-HKにする。
+最悪、カウンターでもHPなら届くのでHPでいい。
+
  <!-- ---- この辺りから優先度検討中 ---- -->
 
 ## 弱攻撃からのスピンキャンセルを使った攻め
@@ -112,11 +190,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - 2LP/2LK, 2LP, 弱スピン-弱Sレオパード, ...
 - 2LP/2LK, 2LP, 弱スピン-弱Sマレット, ...
 - 2LP/2LK(g), 2LP, ガード
-
-## 下段の崩し
-
-- 2MK-HK, CR MK, 2HP, 強スピン, ....
-- 2MK(g), ガード
 
 ## 6Fの確反
 
@@ -138,26 +211,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - {端} DR 6MP/2LK, MK-HK, 中ホーン, 強昇竜, ...
 
 DR 6MPは相打ちでもコンボになる。
-
-## キャンセルラッシュ
-
-- 2MP, CR MK, 2HP, 強スピン
-  - 中ホーン
-    - 弱リンク, 後退
-    - 弱リンク-Sレオパード, ...
-  - {端} 弱ホーン, 強昇竜
-    - LK, 前投げ/後退
-- 2MP(g), CR MK
-  - 投げ: 1F遅らせる
-  - 後退
-
-## 端の投げループとシミー
-
-（反撃設定 > ダウンリバーサル: 通常投げ）
-（反撃設定 > ダウンリバーサル: 何もしない）
-
-- {端} 前投げ, DR 前投げ, ...
-- {端} 前投げ, DR 2LK, ガード, {通常投げ}, 2MP, CR MK, ...
 
 ## 弱攻撃から伸ばすコンボ
 
@@ -193,12 +246,6 @@ DR 6MPは相打ちでもコンボになる。
 - 6MK(g), ガード
 - 6MK-MK
   - DR 2LK/6MK, ...
-
-## 下段の崩し
-
-- 2MK(g), ガード
-- 2MK-HK, 強ホーン
-  - DR 2LK/6MK/投げ, ...
 
 ## 4Fの確反
 
@@ -245,20 +292,9 @@ DR 6MPは相打ちでもコンボになる。
 （反撃設定 > ダウンリバーサル: 通常投げ）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
-- {端} 2LP, 2LP, 弱スピン, 2MK
+- {端} 2LP/2LK, 2LP, 弱スピン, 2MK
   - 前投げ
-  - 後退
-
-## 6HPから端の攻め
-
-（ダウンリバーサル: 中足 2Fディレイ）
-（ダウンリバーサル: 通常投げ）
-（ダウンリバーサル: 何もしない）
-
-- 6HP-HP-HP
-  - {端} HP, 前投げ
-  - {端} HP, 後退: シミー
-- 6HP(g), ガード
+  - 後退, {通常投げ}, 2MP(pc), 強スピン, ...
 
 ## MPのヒット確認
 
@@ -266,33 +302,6 @@ DR 6MPは相打ちでもコンボになる。
 
 - MP-MP, 弱グライド-6P, DR 6MK/2LK/投げ, ...
 - MP(g), ガード
-
-## Sレオパードをガードされた場合のヒット確認
-
-（反撃設定 > ガードリバーサル: 4F技）
-（反撃設定 > ガードリバーサル: 何もしない）
-
-- Sレオパード, ODホーン, ...
-- Sレオパード(g)
-  - 2LP, HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン
-    - 弱リンク-強Sレオパード, ...
-    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
-  - 2LP, HP-HP, ODホーン
-    - 弱リンク-強Sレオパード, ...
-    - {端} 強昇竜, LK, 後退: 端の追撃
-  - 2LP, HP(g), ガード
-  - 2LP(c), MK-HK, 中ホーン
-    - 弱リンク-強Sレオパード, ...
-    - {端} 弱昇竜, 弱リンク, 後退: 端の追撃
-
-まずは2LP, HPルートが基本で、カウンター確認できた時だけMK-HKにする。
-最悪、カウンターでもHPなら届くのでHPでいい。
-
-## Sマレットを使った攻め
-
-- Sマレット, 2LP 2回, 弱スピン-Sマレット, ...
-- Sマレット(g)
-  - 前投げ
 
 ## Sマレットを使った攻め 2
 
@@ -311,13 +320,6 @@ DR 6MPは相打ちでもコンボになる。
 - J.LP-MP, MK-HK, 強ホーン, 弱リンク, 後退
 - J.LP-MP(g), MK, 2LP, 弱スピン, ...
 - J.LP-MP(g), MK(g), ガード
-
-## HPのヒット確認
-
-- HP-HP, ODホーン
-  - 強リンク-Sレオパード, ...
-  - {端} 強昇竜, ...
-- HP(g), ガード
 
 ## インパクト返しのSA3コンボ
 
