--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -537,6 +537,10 @@ ODホーンルートは端近くで当たって高く上がらないと強昇竜
 - マレット(c), 2LP 2回, DR 2LP, 2HP, 強スピン, DR 2MP, ODグライド-6P, SA2: 3451
 - マレット(c), 2LP 2回, DR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4321
 
+## マレット(pc)
+
+- マレット(pc), MK-HK, 強ホーン: 2228
+
 ## Sマレット
 
 モダンは生のSマレットにモダン補正が載るので200安い。
