--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -519,19 +519,28 @@ Cだと受け身を見てHKと3HKを出し分ける。
 - ステップ, 6HP
 - ステップ, 前進, HP
 - ステップ, 前進, 2MK
-- 弱リンク, 後退: 様子見、その場受け身でも投げの外
-- 弱リンク, {その場受け身}, 投げ
-- 弱リンク, {後方受け身}, 6HP: 10F遅れ、差し返し気味に弱・中攻撃を潰す
-- 中リンク-マレット: 中段、6F遅れ、後方受け身からの暴れは差し返し気味に潰す
+- {中央}
+  - 弱リンク, 後退: シミー、端では投げられる
+  - 弱リンク, {その場受け身}, 前進, 投げ
+  - 弱リンク, {後方受け身}, 6HP: 10F遅れ、差し返し気味に弱・中攻撃を潰す
+  - 中リンク-マレット: 中段、6F遅れ、後方受け身からの暴れは差し返し気味に潰す
+  - 中リンク, {後方受け身}, HP: 後方受け身から中攻撃までの暴れを差し返し気味に潰す、一部昇竜にも勝つ
+  - 強リンク-マレット: 中段、7F遅れ、後方受け身でもヒット後投げ間合い
 - {端} 2MK: +5
   - 後退: シミー
+
+基本は目押しでラッシュを重ねる。
 
 中央のラッシュは射程距離ギリギリで難しいけど重ねられる。
 特に投げと中段がギリギリ。中段は当たってもMKが届かないことが多い。2LKやMKはわりと無難。
 
+中央のリンクは可能性を感じるけど、起き上がりに重ねる択がない。
+
 リンクシンクでキャンセルして攻め継続した方が良い。ダメージも200-300くらいしか変わらない。インパクトには注意。
 
 リンクシンクが出なかったらとりあえずステップしてDR MKとかで触るか、諦める。
+
+マレットはカウンター、パニカン確認してそれぞれ2LPとMKに繋ぎたい。
 
 ## 中スピン: 42
 
