--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -17,7 +17,7 @@
 
 6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
 
-## Sレオパードのヒット確認
+## Sレオパードのヒット確認 (初級)
 
 - Sレオパード, ODホーン
   - 弱リンク-強Sレオパード, ...
@@ -111,10 +111,15 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## HPのヒット確認
 
+（ガード切り替え: しゃがみガードのみ）
+（ガードリバーサル: しゃがみ4F技）
+
 - HP-HP, ODホーン
-  - 強リンク-Sレオパード, ...
+  - 強リンク-マレット, 2LP, 2LP, 弱スピン, 弱リンク, 後退
   - {端} 強昇竜, ...
 - HP(g), ガード
+
+相手がしゃがみガードから4F技を出すと割り込めるので、ガードされているのにHP-HPを出したらわかる。
 
 ## 弱攻撃のコンボ
 
@@ -160,7 +165,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - {端} HP, 後退: シミー
 - 6HP(g), ガード
 
-## Sレオパードをガードされた場合のヒット確認
+## Sレオパードのヒット確認 (上級)
 
 （反撃設定 > ガードリバーサル: 4F技）
 （反撃設定 > ガードリバーサル: 何もしない）
