--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -158,8 +158,12 @@ BOさせた後がなんか弱い。何かないかな。
 
 バクステが長すぎて2MPが届かないので、一度密着するとシミーするのも難しい。
 
-マレットで密着できるなら一応900入って+2から投げや2LPで
-マレットから2LPが2回届く
+マレットで密着できるなら一応900入って+2から投げや2LPで。
+マレットから2LPが2回届く。
+
+エレナは相手をBOさせても強くない。端以外では無理にBOさせなくていい。
+
+エレナはHPが強いので、相攻めの中で相手が焦って小パンを押しても届かないところは全部HPで触りに行ってもいいくらい。特に微不利のとき。
 
 ## 中央の攻め
 
