--- a/shared/government/democracy/選挙.md
+++ b/shared/government/democracy/選挙.md
@@ -3,3 +3,5 @@
 与党の公約は全部嘘だと思っていい。
 与党はすぐにでも公約を実現できる立場にあるのだから、まだやってないということは今後もやらないということ。
 「これまでにしてきたことを見てください」以外は無視していい。
+
+うんこの中からマシな臭いのうんこを選ぶのが選挙。それが嫌なら自分が出馬するしかない。
