--- a/games/Street-Fighter/Six/practice/スト6のコマンド入力.md
+++ b/games/Street-Fighter/Six/practice/スト6のコマンド入力.md
@@ -4,6 +4,8 @@
 最後にしっかり3に入れた状態で出すべき。6236や6263みたいになってしまうとSAが暴発することもある。
 特に入力履歴で言うと3の間だけ攻撃ボタンが押されているようにコマンドを成立させる。
 
+振り向き昇竜はまず普通に昇竜を入力してから、相手が裏に抜けるまで引きつけて逆側の斜め下に入れてボタンを押す。6231のような入力。
+
 ## 波動コマンド
 
 前歩きした後は昇竜に化けやすい。
