--- a/shared/computer/software/engineering/要件定義.md
+++ b/shared/computer/software/engineering/要件定義.md
@@ -88,3 +88,6 @@ https://qiita.com/KNR109/items/8b37f7f8c051868d9a98
 スコープを決める時、まずはMVPを考える。できるだけ「作らずに」価値を検証したい。
 
 顧客が「CSV」と呼ぶものはだいたいCSVではないので、まずは実物を確認しよう。
+
+要望のうちHowの部分、どういうふうに改善するか、は専門家が考えることであってどうでもいい。
+しかし、Whyの部分、どうして困っているのか、は利用者が考えることなので重要。企画会議や要件定義では表面的なHowの話を掘り下げて裏にあるWhyの部分を拾わないといけない。
