--- a/shared/discussion/tips/データを求める.md
+++ b/shared/discussion/tips/データを求める.md
@@ -2,3 +2,7 @@
 
 データがあってもたまたま偏った場合もあるし、意図的に偏らせた不正なデータを作ることもできるので、データがあるからと言って正しいわけではないが、データがあれば検証しやすいし、不正しているかどうかも見つけやすい。だから議論の前提としてデータを求めるのは大事。
 少なくともデータがなかったら正しくないと簡単に判断できるので、最初に「データはあるんですか？」とデータを求める。
+
+データは科学的ではないけど、統計的ではある。データがあれば科学的にも検証できる可能性がある。
+
+ひろゆきが「データはあるんですか？」と常に聞くのは、データがあれば検証できるから。弁論の技術でもあるけど、統計的な姿勢でもある。
