--- a/games/Street-Fighter/Six/tips/クラシック操作に慣れる.md
+++ b/games/Street-Fighter/Six/tips/クラシック操作に慣れる.md
@@ -19,3 +19,6 @@
 
 どうせクラシックでやるならリュウや豪鬼のような道着キャラにした方がクラシックらしくはある。
 とっさの昇竜対空とか難しいけど。
+
+いきなりクラシックを使う前に、まずはモダンでもコマンドで対空するところから始める。
+モダンでコマンド対空できないなら通常技対空のキャラを使うのもあり。
