--- a/shared/cooking/recipes/卵料理.md
+++ b/shared/cooking/recipes/卵料理.md
@@ -30,3 +30,5 @@ https://youtube.com/watch?v=SwSXBXGgtk0&si=yUK2UYthoKujQI-_
 
 だし巻き
 https://youtu.be/Q57oyenBDI0?si=4SY8zEABZl2Yh0uy
+
+たまごサンドの具は先に黄身だけしっかり練るとねっとりとまろやかな味になる。砂糖を少し入れてもいい。
