--- a/shared/decision/判断を早くする.md
+++ b/shared/decision/判断を早くする.md
@@ -24,3 +24,7 @@
 予測、いわゆる「読み」によって判断を先に済ませておく。
 
 何かあってから考えるのではなく、何かある前に考えておく。
+
+何かを選ぶ判断を早く、楽にするためには、単純な指標でまずざっくり切り落とす。
+例えば就活だったら給与とか。基準に満たないものは無条件で捨てて、常に残った中から選ぶ。振り返らない。
+ただ、指標だけを見てはいけない。指標はあくまでも特徴的な一部分でしかない。最終選考は直感なども込みで考える。
