--- a/shared/game/genres/fighting/格闘ゲームと反射神経.md
+++ b/shared/game/genres/fighting/格闘ゲームと反射神経.md
@@ -1,8 +1,8 @@
 反射神経があるに越したことはないけど、仕込みとか妥協ルートとか技術面である程度カバーできる。
 
-ただ、スト６なんかはインパクトのせいでかなりおじさんにはつらいゲームになってる。
+ただ、スト６なんかはインパクトのせいでかなりおじさんにはつらいゲームになってる。インパクトを仕込むと漏れて返されるし、パリィじゃリターンがないし。
 
-反射神経がトップ5%の人たちは8Fで反応できる。平均的には16Fくらい。
+反射神経がトップ5%の人たちは8Fで反応できる。人間の平均的には16Fくらい。
 トップ1%は7Fで反応できるが、それ以上はいない。
 
 反射神経が悪かったら無理に受身になるよりは押し付けた方がいい。
