--- a/shared/game/genres/fighting/格闘ゲームのコントローラー.md
+++ b/shared/game/genres/fighting/格闘ゲームのコントローラー.md
@@ -1,6 +1,10 @@
+## コントローラーの種類
+
 - パッド
 - レバー
-- レバーレス、キーボード
+- キー（レバーレス、キーボード）
+
+## メモ
 
 パッドは指を移動させないといけないのが難しい。
 アケコンは対空やインパクトなど、すぐに押さないといけないボタンを基本ポジションにしておけば反射で押せる。
@@ -10,3 +14,6 @@
 
 溜めキャラはパッドだと結構疲れる。
 パッドは方向キーを押しっぱにするのに向いてない。
+
+レバーレスというかキー入力の方向入力は、上下や左右のような逆方向の同時入力ができてしまう。自分でデバイスに最適化して、逆方向をしっかり離して入力できるように練習しないといけない。押すのと離すのとで二つの動作が必要。
+対してパッドやスティックは物理的に逆方向を同時入力できない。人間的に自然な動きで操作できる。
