--- a/shared/logic/合理性.md
+++ b/shared/logic/合理性.md
@@ -25,3 +25,5 @@
 
 まずはその場の「理」を知らないと「合理」もわからない。
 合理的でないと思ったら、まずは知らない「理由」があると考えるといい。「なんでこうなってるの？」と周りに聞いてみるといい。
+
+「冷静沈着で合理的すぎると思っていた人が一番理屈ではない選択をしているのかもしれない」（『アンサングシンデレラ』）
