--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -127,8 +127,11 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 
 ## 牽制
 
-- LK: 全体18F
 - MK: 全体24F、短いけど判定が強い、中スピンや弱レオパード、ラッシュなどを仕込むか、近かったらMK-HKでいい
+- 2LP: 全体14F、フェイント
+
+基本的にはMKを置くのが強い。MK-HK, ホーンを仕込むか、MK, CR MKを仕込む。
+MK-HK, スピンは遠いと届かないことがあるので、Mの強アシコンは注意。
 
 リターン重視だとこの辺も。
 
@@ -144,6 +147,20 @@ MP/6MK/2MKがだいたい同じくらいの距離。
 J.MP-MPの空対空から昇竜やSA1、ODホーンで拾えてわりと火力が出る。
 
 端はできれば空対空を狙いたいが、安定しにくい。
+
+## 弾抜け
+
+通常リンクが11F、ODリンクが8Fから飛び道具無敵。
+MのODなら見てからでもわりと抜けられるけど、差し合いの距離だと厳しい。ちょい下がったところから抜ける感じ。
+
+通常リンクの場合は遠めであらかじめ転がっておかないと弾抜けもパニカンも間に合わない。
+弱で転がっておいて、相手が何かしていたらマレットに派生する。マレットは当たり判定で弾を抜けられる。
+
+見てから抜ける場合はハーベストに飛び道具無敵がある。
+レオパードやマレットに派生してしまうと派生する段階で食らってしまう。
+通常リンクのハーベストは短いので強リンクでも追撃が難しい。基本的にはODで抜けるべき。
+
+遠距離で相手のタイミングをずらすために中/強リンクで弾だけ抜ける手もある。弱だと厳しい。
 
 ## 攻め
 
