--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -28,6 +28,14 @@
 
 6HPのヒット確認と一緒に練習するといい。
 
+## 弱攻撃のヒット確認と弱スピン、SA3の起き攻め
+
+（ダウンリバーサル: 4F技）
+
+- 2LP/2LK, 2LP, 弱スピン
+  - SA3
+  - DR 投げ
+
 ## 弱攻撃のヒット確認
 
 - 2LP/2LK, 2LP, 弱スピン-弱リンク
