--- a/shared/cooking/recipes/クッキーを作る.md
+++ b/shared/cooking/recipes/クッキーを作る.md
@@ -12,10 +12,11 @@
 
 1. 砂糖とバターをよく混ぜる（空気を含んで白っぽくなるまで）
 2. 薄力粉を加えて、切るように混ぜてバターと馴染ませる
-3. ラップで包んで筒状に成形する（円筒か四角柱）
+3. ラップで包んでしっかり押し固め、筒状に成形する（円筒か四角柱）
 4. 冷蔵庫で1-2時間寝かせる（翌日になってもいい）
-5. オーブンを170℃に予熱する
-6. 適当な厚さに切ってクッキングシートを敷いた天板に並べ、15分ほど焼く（縁に薄く焼き色がつくまで）
+5. オーブンを170-180℃に予熱する
+6. 適当な厚さに切ってクッキングシートを敷いた天板に並べる（5mmが基本）
+7. 170-180℃で15分ほど焼く（縁に薄く焼き色がつくまで）
 
 ## メモ
 
@@ -25,3 +26,7 @@
 牛乳や卵黄を塗ると艶が出る。
 
 抹茶とかチョコを混ぜると焼き色が見えづらいのでプレーンで焼いてみて時間を合わせるといい。
+
+オーブンによって焼き具合が違うので、温度は家庭のオーブンに合わせて調整する。
+
+筒状に固めた際にしっかり押し固めないと切った時に崩れる。
