--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -157,15 +157,16 @@ MPパニカン時は強制立たせ効果がある。
 
 DR MP-MPはガードの時立ちだったらTCも立ちで当たる。
 
-## 2MP, グライド
+## 2MP
 
-2MP単発のヒット確認は厳しいので、グライドまで入れ込んでからヒット確認して派生させる。
-入れ込んでしまうとインパクトには弱い。
-
+- 2MP, 弱リンク-レオパード: 1400
 - 2MP, 弱グライド-6P: 1880
 - 2MP, ODグライド-6P: 2280 (AC2)
 - 2MP, ODグライド-6P, SA2: 4096 (AC2)
 - 2MP, ODグライド-6P, SA3: 4480
+
+2MP単発のヒット確認は厳しいので、グライドまで入れ込んでからヒット確認して派生させる。
+入れ込んでしまうとインパクトには弱い。
 
 ODグライドは安定する。
 弱グライドは2MP先端だと届かないことがある。
@@ -190,6 +191,16 @@ ODグライドは安定する。
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, CR 2HP, 弱ホーン, SA3: 5076
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODリンク-Sハーベスト, 中ホーン, SA3: 5180
 
+## 2MP(+2)
+
+- 2MP(+2), 弱リンク-ハーベスト, 強昇竜: 2620 (M:2440)
+- {端} 2MP(+2), 弱リンク-ハーベスト, ODホーン, 強昇竜: 3300 (M:3120)
+- 2MP(+2), 弱リンク-ハーベスト, SA1, 強昇竜: 3460 (M:3280)
+- 2MP(+2), 弱リンク-ハーベスト, ODホーン, SA2: 4140 (M:3960)
+- 2MP(+2), 弱リンク-ハーベスト, SA3: 4700 (M:4520)
+
+モダンは弱リンクがSP入力しかないので180下がる。
+
 ## 2MP(+4), 強スピン
 
 - 2MP(+4), 強スピン, 中ホーン: 2640
@@ -199,27 +210,33 @@ ODグライドは安定する。
 
 火力は高いけど、遠めだと当たらない。特にしゃがみへの判定が弱すぎる。
 
-## 2MP(+4), リンク
+## 2MP(+4)
 
-- 2MP(+4), 弱リンク-ハーベスト, 強昇竜: 2620
-- 2MP(+4), ODリンク-Sハーベスト, 中ホーン: 2860
-- {端} 2MP(+4), 弱リンク-Sハーベスト, ODホーン, 強昇竜: 3300
-- {端} 2MP(+4), ODリンク-Sハーベスト, 弱ホーン, 弱昇竜: 3380
-- {端} 2MP(+4), ODリンク-Sレオパード, ODホーン, 強昇竜: 3600
-- 2MP(+4), 弱リンク-ハーベスト, SA1, 強昇竜: 3460
-- 2MP(+4), ODリンク-ハーベスト, SA1, 強昇竜: 3860
-- {端} 2MP(+4), ODリンク-Sレオパード, ODホーン, SA1, 強昇竜: 4080
-- 2MP(+4), ODリンク-Sハーベスト, SA2: 4140
-- 2MP(+4), ODリンク-Sレオパード, ODホーン, SA2: 4440
-- 2MP(+4), ODリンク-Sハーベスト, 中ホーン, SA3: 4860
+- 2MP(+4), ODリンク-Sハーベスト, 中ホーン: 2860 (M:2600)
+- {端} 2MP(+4), ODリンク-Sハーベスト, 弱ホーン, 弱昇竜: 3380 (M:3120)
+- {端} 2MP(+4), ODリンク-Sレオパード, ODホーン, 強昇竜: 3600 (M:3340)
+- 2MP(+4), ODリンク-Sハーベスト, SA1, 強昇竜: 3860 (M:3600)
+- {端} 2MP(+4), ODリンク-Sレオパード, ODホーン, SA1, 強昇竜: 4080 (M:3840)
+- 2MP(+4), ODリンク-Sハーベスト, SA2: 4140 (M:3880)
+- 2MP(+4), ODリンク-Sレオパード, ODホーン, SA2: 4440 (M:4200)
+- 2MP(+4), ODリンク-Sハーベスト, 中ホーン, SA3: 4860 (M:4600)
 
-モダンの場合、ハーベストは180、Sハーベストは260下がる。
+モダンはODリンクがSP入力しかないのでSハーベストが260下がる。
 
 ## MK
 
 安いけど、MK-HKの確認より少し簡単。
 
 - MK, 2LP, 弱スピン: 1520
+- {立} MK, 2LP, 弱ホーン: 1680
+- {立端} MK, 2LP, 弱ホーン, 中昇竜: 2400
+- MK, 2LP, CR 2LP, 強スピン, 中ホーン: 2496
+- {立} MK, 2LP, ODホーン, 強昇竜: 2600
+- {立} MK, 2LP, ODホーン, SA1, 強昇竜: 3080
+- {立} MK, 2LP, ODホーン, SA2: 3440
+- MK, 2LP, 弱スピン, SA3: 3520
+- {立} MK, 2LP, 弱ホーン, SA3: 3680
+- MK, 2LP, CR 2LP, 強スピン, DR 2MP, 強ホーン, SA3: 4617
 
 ## MK(+1)
 
