--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -147,6 +147,7 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - {端} 前投げ, DR 前投げ, ...
 
 <!-- 上級 -->
+<!-- マスターになってからでいい -->
 
 ## 下段の崩し
 
@@ -157,8 +158,8 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 （差し返しの練習）
 
-- {空振り}, 2MK(pc), 弱リンク-ハーベスト, SA1, 強昇竜
-- {空振り}, 2MK(pc), 弱リンク-ハーベスト, ODホーン, 強リンク-マレット
+- {空振り}, 2MP(pc), 弱リンク-ハーベスト, SA1, 強昇竜
+- {空振り}, 2MP(pc), 弱リンク-ハーベスト, ODホーン, 強リンク-マレット
 - {2HK(g)}, 2HK(pc), 強リンク, MK(+3), ...
 - {2MK(g)}, ガード
 
