--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -54,6 +54,11 @@ HPをガードさせられそうならできるだけ狙う。
 Mエレナはスライディングがなくて下がる相手にやることが本当にない。
 スライディングがあったら相手も離れすぎると持続当てされるから大きく下がれない。
 
+基本的にはMKを置くか、2MPで差し返すか。
+触りに行くならラッシュか、HP、6HP、3HK、2MKあたり。でもMだと3HKがなくて当てに行っても迫力がない。踏み込んで2MKだけだと発生が遅すぎて難しい。
+
+Mは3HKがないせいで結構ゆったり下がられて面倒。
+
 ## 差し合いの距離
 
 6HPがギリギリ当たる間合いでいい。
